# snomed-mcp

./: .gitignore  README.md  mcp-config.json  pyproject.toml
.github/workflows/: ci.yml
src/snomed_mcp/: __init__.py  server.py  utils.py
tests/: conftest.py  test_integration.py  test_server.py  test_utils.py
