[project]
name = "snomed-mcp"
version = "0.1.0"
description = "MCP server for querying SNOMED CT via the BioPortal API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0,<4",
    "httpx>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
snomed-mcp = "snomed_mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
